static/css/style.css
body{
    margin: 0;
}


.drag{
    -webkit-app-region : drag
}

.no-drag{
    -webkit-app-region: no-drag;
}

.material-icons.md-18 { font-size: 18px; }
.material-icons.md-24 { font-size: 24px; }
.material-icons.md-36 { font-size: 36px; }
.material-icons.md-48 { font-size: 48px; }

.side-li > li {
    float: none;
    line-height: 48px;
}

.side-li a {
    color: rgba(0, 0, 0, 0.87);
    display: block;
    font-size: 14px;
    font-weight: 500;
    height: 48px;
    line-height: 48px;
    padding: 0 32px;
}

.row .unpadding {
    padding: 0;
}

.button-collapse{
    padding-left: 15px;
}

.nav-wrapper .side-nav{
    top: 63px;
    z-index: -999;
}

#custom-side-nav {
    left: 0;
    margin: 0;
    height: 100%;
    height: calc(100% + 60px);
    height: -moz-calc(100%);
    padding-bottom: 30px;
    background-color: #fff;
    -webkit-backface-visibility: hidden;
    backface-visibility: hidden;
    overflow-y: auto;
    will-change: transform;
    -webkit-backface-visibility: hidden;
    backface-visibility: hidden;
}

@media(min-width: 601px) {
    #custom-side-nav {
        position: fixed;
        width: inherit;
    }
}

